--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
             <div class="row gy-4">
               <div class="col-md-6">
-                <div class="info-item" data-aos="fade" data-aos-delay="200">
+                <div class="info-item h-100" data-aos="fade" data-aos-delay="200">
                   <i class="bi bi-geo-alt"></i>
                   <h3>Address</h3>
                   <p>Old no 1, New no 33, 2nd floor, OMR, Seevaram, Perungudi, Chennai-600096</p>
@@ -156,7 +156,7 @@
               </div><!-- End Info Item -->
 
               <div class="col-md-6">
-                <div class="info-item" data-aos="fade" data-aos-delay="300">
+                <div class="info-item h-100" data-aos="fade" data-aos-delay="300">
                   <i class="bi bi-telephone"></i>
                   <h3>Call Us</h3>
                   <p>8939456060 <br>
@@ -165,15 +165,15 @@
               </div><!-- End Info Item -->
 
               <div class="col-md-6">
-                <div class="info-item" data-aos="fade" data-aos-delay="400">
+                <div class="info-item h-100" data-aos="fade" data-aos-delay="400">
                   <i class="bi bi-envelope"></i>
                   <h3>Email Us</h3>
-                  <p>info@example.com</p>
+                  <p>info@sparizzam.com</p>
                 </div>
               </div><!-- End Info Item -->
 
               <div class="col-md-6">
-                <div class="info-item" data-aos="fade" data-aos-delay="500">
+                <div class="info-item h-100" data-aos="fade" data-aos-delay="500">
                   <i class="bi bi-clock"></i>
                   <h3>Open Hours</h3>
                   <p>Monday - Sunday</p>
