--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
           </div>
 
           <div class="col-lg-6">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3888.283551169272!2d80.24261299999999!3d12.953699000000002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMTLCsDU3JzEzLjMiTiA4MMKwMTQnMzMuNCJF!5e0!3m2!1sen!2sin!4v1723540190498!5m2!1sen!2sin" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3888.2834623910653!2d80.2400022748411!3d12.953704687359975!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a525d000fd7e535%3A0x443208e46579acbf!2ssparizzam!5e0!3m2!1sen!2sin!4v1723544491462!5m2!1sen!2sin" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div><!-- End Contact Form -->
 
         </div>
