--- a/about.html
+++ b/about.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta charset="utf-8">
-    <title>SPA Center - Beauty & Spa HTML Template</title>
+    <title>Ssparizzam - About </title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Free HTML Templates" name="keywords">
-    <meta content="Free HTML Templates" name="description">
+    <meta content="About Sparizzam, Chennai spa, spa retreat, personalized spa treatments, skilled therapists, relaxation" name="keywords">
+    <meta content="Discover Sparizzam, where ancient traditions meet modern relaxation techniques. Our skilled therapists in Chennai provide personalized spa treatments for complete rejuvenation and tranquility." name="description">
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
