--- a/contact.html
+++ b/contact.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta charset="utf-8">
-    <title>SPA Center - Beauty & Spa HTML Template</title>
+    <title>sparizzam - Contact Us </title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Free HTML Templates" name="keywords">
-    <meta content="Free HTML Templates" name="description">
+    <meta content="Contact Sparizzam, Chennai spa contact, spa location, booking, spa hours, contact details" name="keywords">
+    <meta content="Get in touch with Sparizzam, your premier spa in Chennai. Find our location, contact details, and hours of operation to book your rejuvenating spa experience today." name="description">
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
