--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta charset="utf-8">
-    <title>SPA Center - Beauty & Spa HTML Template</title>
+    <title>sparizzam - Home </title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free HTML Templates" name="keywords">
-    <meta content="Free HTML Templates" name="description">
+    <meta content="Welcome to Sparizzam, your ultimate spa retreat in Chennai. Experience luxurious massages, rejuvenating facials, and personalized treatments designed to refresh your body, mind, and soul." name=" Sparizzam, Chennai spa, luxury spa, massage therapy, facials, body treatments, relaxation">
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
