--- a/service.html
+++ b/service.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta charset="utf-8">
-    <title>SPA Center - Beauty & Spa HTML Template</title>
+    <title>sparizzam - Services </title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Free HTML Templates" name="keywords">
-    <meta content="Free HTML Templates" name="description">
+    <meta content="parizzam services, Chennai spa services, massages, facials, body scrubs, spa treatments, well-being" name="keywords">
+    <meta content="Explore our wide range of spa services at Sparizzam, including massages, facials, body scrubs, and more. Tailored treatments to enhance your well-being and relaxation." name="description">
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
