--- a/gallery.html
+++ b/gallery.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta charset="utf-8">
-    <title>SPA Center - Beauty & Spa HTML Template</title>
+    <title>sparizzam - Gallery </title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Free HTML Templates" name="keywords">
-    <meta content="Free HTML Templates" name="description">
+    <meta content="Sparizzam gallery, Chennai spa, spa photos, treatment rooms, relaxing ambiance, luxury spa" name="keywords">
+    <meta content="View the Sparizzam gallery and explore our tranquil spa environment in Chennai. See our luxurious treatment rooms and relaxing ambiance designed for your comfort." name="description">
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
