--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <meta content="Discover Sparizzam, where ancient traditions meet modern relaxation techniques. Our skilled therapists in Chennai provide personalized spa treatments for complete rejuvenation and tranquility." name="description">
 
     <!-- Favicon -->
-    <link href="img/favicon.ico" rel="icon">
+    <link href="./img/SPARIZZAM PNG-01_logo.png" rel="icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
