--- a/gallery.html
+++ b/gallery.html
@@ -9,7 +9,7 @@
     <meta content="View the Sparizzam gallery and explore our tranquil spa environment in Chennai. See our luxurious treatment rooms and relaxing ambiance designed for your comfort." name="description">
 
     <!-- Favicon -->
-    <link href="img/favicon.ico" rel="icon">
+    <link href="./img/SPARIZZAM PNG-01_logo.png" rel="icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
