--- a/service.html
+++ b/service.html
@@ -9,7 +9,7 @@
     <meta content="Explore our wide range of spa services at Sparizzam, including massages, facials, body scrubs, and more. Tailored treatments to enhance your well-being and relaxation." name="description">
 
     <!-- Favicon -->
-    <link href="img/favicon.ico" rel="icon">
+    <link href="./img/SPARIZZAM PNG-01_logo.png" rel="icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
