--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
     <meta content="Get in touch with Sparizzam, your premier spa in Chennai. Find our location, contact details, and hours of operation to book your rejuvenating spa experience today." name="description">
 
     <!-- Favicon -->
-    <link href="img/favicon.ico" rel="icon">
+    <link href="./img/SPARIZZAM PNG-01_logo.png" rel="icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
