--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta content="Welcome to Sparizzam, your ultimate spa retreat in Chennai. Experience luxurious massages, rejuvenating facials, and personalized treatments designed to refresh your body, mind, and soul." name=" Sparizzam, Chennai spa, luxury spa, massage therapy, facials, body treatments, relaxation">
 
     <!-- Favicon -->
-    <link href="img/favicon.ico" rel="icon">
+    <link href="./img/SPARIZZAM PNG-01_logo.png" rel="icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
