--- a/about.html
+++ b/about.html
@@ -71,7 +71,7 @@
         <nav class="navbar navbar-expand-lg bg-white navbar-light py-3 py-lg-0 px-lg-5">
             <a href="index.html" class="navbar-brand ml-lg-3">
                 <h1 class="m-0 text-primary"><span class="text-dark">
-                        <img src="./img/SPARIZZAM PNG-01_logo.png" style="height: 70px; width: auto;" alt="">
+                        <img src="./img/SPARIZZAM PNG-01_logo.png" style="height: 70px; width: auto;" alt="Herbal massage Chennai">
                     </span> </h1>
             </a>
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
@@ -121,7 +121,7 @@
         <div class="container py-5">
             <div class="row align-items-center">
                 <div class="col-lg-6 pb-5 pb-lg-0">
-                    <img class="img-fluid w-100" src="img/pexels-elly-fairytale-3865792.jpg" alt="">
+                    <img class="img-fluid w-100" src="img/pexels-elly-fairytale-3865792.jpg" alt="Traditional massage Chennai">
                 </div>
                 <div class="col-lg-6">
                     <h6 class="d-inline-block text-primary text-uppercase bg-light py-1 px-2">About Sparizzam: Your Ultimate Spa Retreat</h6>
@@ -160,7 +160,7 @@
             <div class="row">
                 <div class="col-lg-3 col-md-6">
                     <div class="team position-relative overflow-hidden mb-5">
-                        <img class="img-fluid" src="img/team-1.jpg" alt="">
+                        <img class="img-fluid" src="img/team-1.jpg" alt="Sparizzam Chennai">
                         <div class="position-relative text-center">
                             <div class="team-text bg-primary text-white">
                                 <h5 class="text-white text-uppercase">Olivia Mia</h5>
@@ -176,7 +176,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <div class="team position-relative overflow-hidden mb-5">
-                        <img class="img-fluid" src="img/team-2.jpg" alt="">
+                        <img class="img-fluid" src="img/team-2.jpg" alt="Sparizzam spa services">
                         <div class="position-relative text-center">
                             <div class="team-text bg-primary text-white">
                                 <h5 class="text-white text-uppercase">Cory Brown</h5>
@@ -192,7 +192,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <div class="team position-relative overflow-hidden mb-5">
-                        <img class="img-fluid" src="img/team-3.jpg" alt="">
+                        <img class="img-fluid" src="img/team-3.jpg" alt="Sparizzam massage therapies">
                         <div class="position-relative text-center">
                             <div class="team-text bg-primary text-white">
                                 <h5 class="text-white text-uppercase">Elizabeth Ross</h5>
@@ -208,7 +208,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <div class="team position-relative overflow-hidden mb-5">
-                        <img class="img-fluid" src="img/team-4.jpg" alt="">
+                        <img class="img-fluid" src="img/team-4.jpg" alt="Sparizzam signature treatments">
                         <div class="position-relative text-center">
                             <div class="team-text bg-primary text-white">
                                 <h5 class="text-white text-uppercase">Kelly Walke</h5>
@@ -235,7 +235,7 @@
             <div class="col-lg-6 pr-lg-5 mb-2">
                 <a href="index.html" class="navbar-brand">
                     
-                    <h1 class="mb-3 text-white"><span class="text-primary"><img src="./img/SPARIZZAM PNG-01_logo.png" style="height: 70px; width: auto;" alt=""> &nbsp;SPA</span>rizzam</h1>
+                    <h1 class="mb-3 text-white"><span class="text-primary"><img src="./img/SPARIZZAM PNG-01_logo.png" style="height: 70px; width: auto;" alt="Thoraipakkam spa"> &nbsp;SPA</span>rizzam</h1>
                 </a>
                 <p>Experience luxury and tranquility at Sparizzam. Visit us for personalized spa treatments and pure relaxation.</p>
                 <p><i class="fa fa-map-marker-alt mr-2"></i>Old no 1, New no 33, 2nd floor, <br> OMR, Seevaram, Perungudi, <br> Chennai-600096</p>
