--- a/contact.html
+++ b/contact.html
@@ -70,7 +70,7 @@
             <nav class="navbar navbar-expand-lg bg-white navbar-light py-3 py-lg-0 px-lg-5">
                 <a href="index.html" class="navbar-brand ml-lg-3">
                     <h1 class="m-0 text-primary"><span class="text-dark">
-                            <img src="./img/SPARIZZAM PNG-01_logo.png" style="height: 70px; width: auto;" alt="">
+                            <img src="./img/SPARIZZAM PNG-01_logo.png" style="height: 70px; width: auto;" alt="Facial treatments Chennai">
                         </span> </h1>
                 </a>
                 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
@@ -182,7 +182,7 @@
                 <div class="col-lg-6 pr-lg-5 mb-2">
                     <a href="index.html" class="navbar-brand">
                         
-                        <h1 class="mb-3 text-white"><span class="text-primary"><img src="./img/SPARIZZAM PNG-01_logo.png" style="height: 70px; width: auto;" alt=""> &nbsp;SPA</span>rizzam</h1>
+                        <h1 class="mb-3 text-white"><span class="text-primary"><img src="./img/SPARIZZAM PNG-01_logo.png" style="height: 70px; width: auto;" alt="Body polish Chennai"> &nbsp;SPA</span>rizzam</h1>
                     </a>
                     <p>Experience luxury and tranquility at Sparizzam. Visit us for personalized spa treatments and pure relaxation.</p>
                     <p><i class="fa fa-map-marker-alt mr-2"></i>Old no 1, New no 33, 2nd floor, <br> OMR, Seevaram, Perungudi, <br> Chennai-600096</p>
