--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <nav class="navbar navbar-expand-lg bg-white navbar-light py-3 py-lg-0 px-lg-5">
             <a href="index.html" class="navbar-brand ml-lg-3">
                 <h1 class="m-0 text-primary"><span class="text-dark">
-                        <img src="./img/SPARIZZAM PNG-01_logo.png" style="height: 70px; width: auto;" alt="">
+                        <img src="./img/SPARIZZAM PNG-01_logo.png" style="height: 70px; width: auto;" alt="Stress relief massage Chennai">
                     </span> </h1>
             </a>
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
@@ -152,7 +152,7 @@
         <div class="container py-5">
             <div class="row align-items-center">
                 <div class="col-lg-6 pb-5 pb-lg-0">
-                    <img class="img-fluid w-100" src="img/about.jpg" alt="">
+                    <img class="img-fluid w-100" src="img/about.jpg" alt="Best facial treatment Chennai">
                 </div>
                 <div class="col-lg-6">
                     <h6 class="d-inline-block text-primary text-uppercase bg-light py-1 px-2">About Us</h6>
@@ -192,7 +192,7 @@
         </div>
         <div class="owl-carousel service-carousel">
             <div class="service-item position-relative">
-                <img class="img-fluid" src="img/service-1.jpg" alt="">
+                <img class="img-fluid" src="img/service-1.jpg" alt="Skin rejuvenation Chennai">
                 <div class="service-text text-center">
                     <h4 class="text-white font-weight-medium px-3">Body Massage</h4>
                     <p class="text-white px-3 mb-3">Revitalize your body with our soothing, full-body massage therapy.
@@ -204,7 +204,7 @@
                 </div>
             </div>
             <div class="service-item position-relative">
-                <img class="img-fluid" src="img/service-2.jpg" alt="">
+                <img class="img-fluid" src="img/service-2.jpg" alt="Spa for wellness Chennai">
                 <div class="service-text text-center">
                     <h4 class="text-white font-weight-medium px-3">Stone Therapy</h4>
                     <p class="text-white px-3 mb-3">
@@ -216,7 +216,7 @@
                 </div>
             </div>
             <div class="service-item position-relative">
-                <img class="img-fluid" src="img/service-3.jpg" alt="">
+                <img class="img-fluid" src="img/service-3.jpg" alt="happy ending">
                 <div class="service-text text-center">
                     <h4 class="text-white font-weight-medium px-3">Facial Therapy</h4>
                     <p class="text-white px-3 mb-3">Rejuvenate your skin with our revitalizing and soothing facial
@@ -228,7 +228,7 @@
                 </div>
             </div>
             <div class="service-item position-relative">
-                <img class="img-fluid" src="img/service-4.jpg" alt="">
+                <img class="img-fluid" src="img/service-4.jpg" alt="body massage">
                 <div class="service-text text-center">
                     <h4 class="text-white font-weight-medium px-3">Skin Care</h4>
                     <p class="text-white px-3 mb-3">Nurture your skin with our revitalizing and rejuvenating skincare
@@ -240,7 +240,7 @@
                 </div>
             </div>
             <div class="service-item position-relative">
-                <img class="img-fluid" src="img/service-5.jpg" alt="">
+                <img class="img-fluid" src="img/service-5.jpg" alt="chennai girls massage">
                 <div class="service-text text-center">
                     <h4 class="text-white font-weight-medium px-3">Stream Bath</h4>
                     <p class="text-white px-3 mb-3">Detoxify, rejuvenate, and relax with our soothing steam bath
@@ -252,7 +252,7 @@
                 </div>
             </div>
             <div class="service-item position-relative">
-                <img class="img-fluid" src="img/service-6.jpg" alt="">
+                <img class="img-fluid" src="img/service-6.jpg" alt="locanto">
                 <div class="service-text text-center">
                     <h4 class="text-white font-weight-medium px-3">Face Masking</h4>
                     <p class="text-white px-3 mb-3">Revitalize your skin with our nourishing, rejuvenating face masks.
@@ -344,7 +344,7 @@
             <div class="row">
                 <div class="col-lg-3 col-md-6">
                     <div class="team position-relative overflow-hidden mb-5">
-                        <img class="img-fluid" src="img/team-1.jpg" alt="">
+                        <img class="img-fluid" src="img/team-1.jpg" alt="near me massage center">
                         <div class="position-relative text-center">
                             <div class="team-text bg-primary text-white">
                                 <h5 class="text-white text-uppercase">Olivia Mia</h5>
@@ -360,7 +360,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <div class="team position-relative overflow-hidden mb-5">
-                        <img class="img-fluid" src="img/team-2.jpg" alt="">
+                        <img class="img-fluid" src="img/team-2.jpg" alt="spa">
                         <div class="position-relative text-center">
                             <div class="team-text bg-primary text-white">
                                 <h5 class="text-white text-uppercase">Cory Brown</h5>
@@ -376,7 +376,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <div class="team position-relative overflow-hidden mb-5">
-                        <img class="img-fluid" src="img/team-3.jpg" alt="">
+                        <img class="img-fluid" src="img/team-3.jpg" alt="happy ending massage">
                         <div class="position-relative text-center">
                             <div class="team-text bg-primary text-white">
                                 <h5 class="text-white text-uppercase">Elizabeth Ross</h5>
@@ -392,7 +392,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <div class="team position-relative overflow-hidden mb-5">
-                        <img class="img-fluid" src="img/team-4.jpg" alt="">
+                        <img class="img-fluid" src="img/team-4.jpg" alt="Chennai spa">
                         <div class="position-relative text-center">
                             <div class="team-text bg-primary text-white">
                                 <h5 class="text-white text-uppercase">Kelly Walke</h5>
@@ -417,7 +417,7 @@
         <div class="container py-5">
             <div class="row align-items-center">
                 <div class="col-lg-6 pb-5 pb-lg-0">
-                    <img class="img-fluid w-100" src="img/testimonial.jpg" alt="">
+                    <img class="img-fluid w-100" src="img/testimonial.jpg" alt="Luxury spa Chennai">
                 </div>
                 <div class="col-lg-6">
                     <h6 class="d-inline-block text-primary text-uppercase bg-light py-1 px-2">Testimonial</h6>
@@ -428,7 +428,7 @@
                                 style="top: -6px; right: 0;"></i>
                             <div class="d-flex align-items-center mb-3">
                                 <img class="img-fluid rounded-circle" src="img/testimonial-1.jpg"
-                                    style="width: 60px; height: 60px;" alt="">
+                                    style="width: 60px; height: 60px;" alt="Best spa in Chennai">
                                 <div class="ml-3">
                                     <h6 class="text-uppercase">Priya S.</h6>
                                 </div>
@@ -441,7 +441,7 @@
                                 style="top: -6px; right: 0;"></i>
                             <div class="d-flex align-items-center mb-3">
                                 <img class="img-fluid rounded-circle" src="img/testimonial-2.jpg"
-                                    style="width: 60px; height: 60px;" alt="">
+                                    style="width: 60px; height: 60px;" alt="Relaxation spa Chennai">
                                 <div class="ml-3">
                                     <h6 class="text-uppercase"> Aisha R.</h6>
                                 </div>
@@ -454,7 +454,7 @@
                                 style="top: -6px; right: 0;"></i>
                             <div class="d-flex align-items-center mb-3">
                                 <img class="img-fluid rounded-circle" src="img/testimonial-3.jpg"
-                                    style="width: 60px; height: 60px;" alt="">
+                                    style="width: 60px; height: 60px;" alt="Spa retreat Chennai">
                                 <div class="ml-3">
                                     <h6 class="text-uppercase">Sneha K.</h6>
                                 </div>
@@ -477,7 +477,7 @@
                 <div class="col-lg-6 pr-lg-5 mb-2">
                     <a href="index.html" class="navbar-brand">
                         
-                        <h1 class="mb-3 text-white"><span class="text-primary"><img src="./img/SPARIZZAM PNG-01_logo.png" style="height: 70px; width: auto;" alt=""> &nbsp;SPA</span>rizzam</h1>
+                        <h1 class="mb-3 text-white"><span class="text-primary"><img src="./img/SPARIZZAM PNG-01_logo.png" style="height: 70px; width: auto;" alt="Spa therapy Chennai"> &nbsp;SPA</span>rizzam</h1>
                     </a>
                     <p>Experience luxury and tranquility at Sparizzam. Visit us for personalized spa treatments and pure relaxation.</p>
                     <p><i class="fa fa-map-marker-alt mr-2"></i>Old no 1, New no 33, 2nd floor, <br> OMR, Seevaram, Perungudi, <br> Chennai-600096</p>
