--- a/service.html
+++ b/service.html
@@ -70,7 +70,7 @@
         <nav class="navbar navbar-expand-lg bg-white navbar-light py-3 py-lg-0 px-lg-5">
             <a href="index.html" class="navbar-brand ml-lg-3">
                 <h1 class="m-0 text-primary"><span class="text-dark">
-                        <img src="./img/SPARIZZAM PNG-01_logo.png" style="height: 70px; width: auto;" alt="">
+                        <img src="./img/SPARIZZAM PNG-01_logo.png" style="height: 70px; width: auto;" alt="Tranquil spa Chennai">
                     </span> </h1>
             </a>
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
@@ -220,7 +220,7 @@
         </div>
         <div class="owl-carousel service-carousel">
             <div class="service-item position-relative">
-                <img class="img-fluid" src="img/service-1.jpg" alt="">
+                <img class="img-fluid" src="img/service-1.jpg" alt="Professional spa services Chennai">
                 <div class="service-text text-center">
                     <h4 class="text-white font-weight-medium px-3">Body Massage</h4>
                     <p class="text-white px-3 mb-3">Revitalize your body with our soothing, full-body massage therapy.
@@ -232,7 +232,7 @@
                 </div>
             </div>
             <div class="service-item position-relative">
-                <img class="img-fluid" src="img/service-2.jpg" alt="">
+                <img class="img-fluid" src="img/service-2.jpg" alt="Head massage Chennai">
                 <div class="service-text text-center">
                     <h4 class="text-white font-weight-medium px-3">Stone Therapy</h4>
                     <p class="text-white px-3 mb-3">
@@ -244,7 +244,7 @@
                 </div>
             </div>
             <div class="service-item position-relative">
-                <img class="img-fluid" src="img/service-3.jpg" alt="">
+                <img class="img-fluid" src="img/service-3.jpg" alt="Foot massage Chennai">
                 <div class="service-text text-center">
                     <h4 class="text-white font-weight-medium px-3">Facial Therapy</h4>
                     <p class="text-white px-3 mb-3">Rejuvenate your skin with our revitalizing and soothing facial
@@ -256,7 +256,7 @@
                 </div>
             </div>
             <div class="service-item position-relative">
-                <img class="img-fluid" src="img/service-4.jpg" alt="">
+                <img class="img-fluid" src="img/service-4.jpg" alt="Ayurvedic massage Chennai">
                 <div class="service-text text-center">
                     <h4 class="text-white font-weight-medium px-3">Skin Care</h4>
                     <p class="text-white px-3 mb-3">Nurture your skin with our revitalizing and rejuvenating skincare
@@ -268,7 +268,7 @@
                 </div>
             </div>
             <div class="service-item position-relative">
-                <img class="img-fluid" src="img/service-5.jpg" alt="">
+                <img class="img-fluid" src="img/service-5.jpg" alt="Thai massage Chennai">
                 <div class="service-text text-center">
                     <h4 class="text-white font-weight-medium px-3">Stream Bath</h4>
                     <p class="text-white px-3 mb-3">Detoxify, rejuvenate, and relax with our soothing steam bath
@@ -280,7 +280,7 @@
                 </div>
             </div>
             <div class="service-item position-relative">
-                <img class="img-fluid" src="img/service-6.jpg" alt="">
+                <img class="img-fluid" src="img/service-6.jpg" alt="Balinese massage Chennai">
                 <div class="service-text text-center">
                     <h4 class="text-white font-weight-medium px-3">Face Masking</h4>
                     <p class="text-white px-3 mb-3">Revitalize your skin with our nourishing, rejuvenating face masks.
@@ -339,7 +339,7 @@
         <div class="container py-5">
             <div class="row align-items-center">
                 <div class="col-lg-6 pb-5 pb-lg-0">
-                    <img class="img-fluid w-100" src="img/testimonial.jpg" alt="">
+                    <img class="img-fluid w-100" src="img/testimonial.jpg" alt="Deep tissue massage Chennai">
                 </div>
                 <div class="col-lg-6">
                     <h6 class="d-inline-block text-primary text-uppercase bg-light py-1 px-2">Testimonial</h6>
@@ -350,7 +350,7 @@
                                 style="top: -6px; right: 0;"></i>
                             <div class="d-flex align-items-center mb-3">
                                 <img class="img-fluid rounded-circle" src="img/testimonial-1.jpg"
-                                    style="width: 60px; height: 60px;" alt="">
+                                    style="width: 60px; height: 60px;" alt="Sports massage Chennai">
                                 <div class="ml-3">
                                     <h6 class="text-uppercase">Priya S.</h6>
                                 </div>
@@ -363,7 +363,7 @@
                                 style="top: -6px; right: 0;"></i>
                             <div class="d-flex align-items-center mb-3">
                                 <img class="img-fluid rounded-circle" src="img/testimonial-2.jpg"
-                                    style="width: 60px; height: 60px;" alt="">
+                                    style="width: 60px; height: 60px;" alt="Reflexology Chennai">
                                 <div class="ml-3">
                                     <h6 class="text-uppercase"> Aisha R.</h6>
                                 </div>
@@ -376,7 +376,7 @@
                                 style="top: -6px; right: 0;"></i>
                             <div class="d-flex align-items-center mb-3">
                                 <img class="img-fluid rounded-circle" src="img/testimonial-3.jpg"
-                                    style="width: 60px; height: 60px;" alt="">
+                                    style="width: 60px; height: 60px;" alt="Swedish massage Chennai">
                                 <div class="ml-3">
                                     <h6 class="text-uppercase">Sneha K.</h6>
                                 </div>
@@ -399,7 +399,7 @@
                 <div class="col-lg-6 pr-lg-5 mb-2">
                     <a href="index.html" class="navbar-brand">
                         
-                        <h1 class="mb-3 text-white"><span class="text-primary"><img src="./img/SPARIZZAM PNG-01_logo.png" style="height: 70px; width: auto;" alt=""> &nbsp;SPA</span>rizzam</h1>
+                        <h1 class="mb-3 text-white"><span class="text-primary"><img src="./img/SPARIZZAM PNG-01_logo.png" style="height: 70px; width: auto;" alt="Kerala body massage Chennai"> &nbsp;SPA</span>rizzam</h1>
                     </a>
                     <p>Experience luxury and tranquility at Sparizzam. Visit us for personalized spa treatments and pure relaxation.</p>
                     <p><i class="fa fa-map-marker-alt mr-2"></i>Old no 1, New no 33, 2nd floor, <br> OMR, Seevaram, Perungudi, <br> Chennai-600096</p>
