--- a/gallery.html
+++ b/gallery.html
@@ -105,7 +105,7 @@
 
 
     <!-- Header Start -->
-    <div class="jumbotron jumbotron-fluid bg-jumbotron" style="margin-bottom: 90px;">
+    <div class="jumbotron jumbotron-fluid bg-jumbotron_2" style="margin-bottom: 90px;">
         <div class="container text-center py-5">
             <h3 class="text-white display-3 mb-4">Gallery</h3>
             <div class="d-inline-flex align-items-center text-white">
