--- a/about.html
+++ b/about.html
@@ -110,7 +110,8 @@
                     </div> -->
                     <a href="contact.html" class="nav-item nav-link">Contact</a>
                 </div>
-                <a href="tel:+918939456060" class="btn btn-primary d-none d-lg-block">Book Now</a>
+                <a href="https://forms.gle/VSdDBfdxjAcgnwNk9" class="btn btn-primary d-none d-lg-block">Book Now</a>
+
             </div>
         </nav>
     </div>
