--- a/gallery.html
+++ b/gallery.html
@@ -97,7 +97,8 @@
                     <a href="gallery.html" class="nav-item nav-link active">Gallery</a>
                     <a href="contact.html" class="nav-item nav-link">Contact</a>
                 </div>
-                <a href="tel:+918939456060" class="btn btn-primary d-none d-lg-block">Book Now</a>
+                <a href="https://forms.gle/VSdDBfdxjAcgnwNk9" class="btn btn-primary d-none d-lg-block">Book Now</a>
+
             </div>
         </nav>
     </div>
