--- a/gallery.html
+++ b/gallery.html
@@ -95,8 +95,7 @@
                     <a href="about.html" class="nav-item nav-link">About</a>
                     <a href="service.html" class="nav-item nav-link">Services</a>
                     <a href="gallery.html" class="nav-item nav-link active">Gallery</a>
-                    <a href="contact.html" class="nav-item nav-link">Contact</a>
-                </div>
+                    <a href="contact.html" class="nav-item nav-link">Contact</a><a href="https://drive.google.com/file/d/13z68bLGeMTK0AQOfRr3Q8TZsc6GcRjvF/view?usp=drive_link" class="nav-item nav-link">download brochure <i class="bi bi-cloud-download-fill"></i></a>
                 <a href="https://forms.gle/VSdDBfdxjAcgnwNk9" class="btn btn-primary d-none d-lg-block">Book Now</a>
 
             </div>
