--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
                         </div>
                     </div> -->
                     <a href="contact.html" class="nav-item nav-link">Contact</a>
+                    <a href="https://drive.google.com/file/d/13z68bLGeMTK0AQOfRr3Q8TZsc6GcRjvF/view?usp=drive_link" class="nav-item nav-link">download brochure <i class="bi bi-cloud-download-fill"></i></a>
                 </div>
                 <a href="https://forms.gle/VSdDBfdxjAcgnwNk9" class="btn btn-primary d-none d-lg-block">Book Now</a>
             </div>
