--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
 </head>
 
 <body>
+    <!-- call button  -->
+    <a class="fixed-tel" href="tel:+918939456060" title="Call Now"><i class="fas fa-phone-alt"></i></a>
+     <!-- whats app button  -->
+     <a class="fixed-tel_2" href="https://wa.me/+918939456060" title="Call Now"><i class="bi bi-whatsapp"></i></a>
+
     <!-- Topbar Start -->
     <div class="container-fluid bg-light d-none d-lg-block">
         <div class="row py-2 px-lg-5">
