--- a/gallery.html
+++ b/gallery.html
@@ -18,8 +18,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
 
-    <!-- Font Awesome -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
+        <!-- Font Awesome -->
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
+        <!-- bootstrap-icons -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">>
 
     <!-- Libraries Stylesheet -->
     <link href="lib/animate/animate.min.css" rel="stylesheet">
@@ -82,31 +84,42 @@
     <!-- Topbar End -->
 
 
-    <!-- Navbar Start -->
-    <div class="container-fluid p-0">
-        <nav class="navbar navbar-expand-lg bg-white navbar-light py-3 py-lg-0 px-lg-5">
-            <a href="index.html" class="navbar-brand ml-lg-3">
-                <h1 class="m-0 text-primary"><span class="text-dark">
-                        <img src="./img/SPARIZZAM PNG-01_logo.png" style="height: 70px; width: auto;"
-                            alt="Steam sauna Chennai">
-                    </span> </h1>
-            </a>
-            <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse justify-content-between px-lg-3" id="navbarCollapse">
-                <div class="navbar-nav m-auto py-0">
-                    <a href="index.html" class="nav-item nav-link ">Home</a>
-                    <a href="about.html" class="nav-item nav-link">About</a>
-                    <a href="service.html" class="nav-item nav-link">Services</a>
-                    <a href="gallery.html" class="nav-item nav-link active">Gallery</a>
-                    <a href="contact.html" class="nav-item nav-link">Contact</a><a href="https://drive.google.com/file/d/13z68bLGeMTK0AQOfRr3Q8TZsc6GcRjvF/view?usp=drive_link" class="nav-item nav-link">download brochure <i class="bi bi-cloud-download-fill"></i></a>
-                <a href="https://forms.gle/VSdDBfdxjAcgnwNk9" class="btn btn-primary d-none d-lg-block">Book Now</a>
+  <!-- Navbar Start -->
+  <div class="container-fluid p-0">
+    <nav class="navbar navbar-expand-lg bg-white navbar-light py-3 py-lg-0 px-lg-5">
+        <a href="index.html" class="navbar-brand ml-lg-3">
+            <h1 class="m-0 text-primary"><span class="text-dark">
+                    <img src="./img/SPARIZZAM PNG-01_logo.png" style="height: 70px; width: auto;"
+                        alt="Stress relief massage Chennai">
+                </span> </h1>
+        </a>
+        <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-between px-lg-3" id="navbarCollapse">
+            <div class="navbar-nav m-auto py-0">
+                <a href="index.html" class="nav-item nav-link ">Home</a>
+                <a href="about.html" class="nav-item nav-link">About</a>
+                <a href="service.html" class="nav-item nav-link">Services</a>
+                <a href="gallery.html" class="nav-item nav-link active">Gallery</a>
 
+                <!-- <div class="nav-item dropdown">
+                    <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>
+                    <div class="dropdown-menu rounded-0 m-0">
+                        <a href="appointment.html" class="dropdown-item">Appointment</a>
+                        <a href="opening.html" class="dropdown-item">Open Hours</a>
+                        <a href="team.html" class="dropdown-item">Our Team</a>
+                        <a href="testimonial.html" class="dropdown-item">Testimonial</a>
+                    </div>
+                </div> -->
+                <a href="contact.html" class="nav-item nav-link">Contact</a>
+                <a href="https://drive.google.com/file/d/13z68bLGeMTK0AQOfRr3Q8TZsc6GcRjvF/view?usp=drive_link" class="nav-item nav-link">download brochure <i class="bi bi-cloud-download-fill"></i></a>
             </div>
-        </nav>
-    </div>
-    <!-- Navbar End -->
+            <a href="https://forms.gle/VSdDBfdxjAcgnwNk9" class="btn btn-primary d-none d-lg-block">Book Now</a>
+        </div>
+    </nav>
+</div>
+<!-- Navbar End -->
 
 
     <!-- Header Start -->
@@ -134,25 +147,53 @@
             </div>
             <div class="row">
                 <div class="col-6 col-lg-3">
-                    <img src="./img/1.jpg" class="img-fluid mb-4 shadow-lg" alt="Full body scrubbing Chennai
-                    ">
+                    <img src="./img/gall1.jpg" class="img-fluid mb-4 shadow-lg" alt="Full body scrubbing Chennai">
                 </div>
                 <div class="col-6 col-lg-3">
-                    <img src="./img/2.jpg" class="img-fluid mb-4 shadow-lg" alt="Detoxifying massage Chennai">
+                    <img src="./img/gall2.jpg" class="img-fluid mb-4 shadow-lg" alt="Detoxifying massage Chennai">
                 </div>
                 <div class="col-6 col-lg-3">
-                    <img src="./img/3.jpg" class="img-fluid mb-4 shadow-lg" alt="Aroma massage Chennai">
+                    <img src="./img/gall3.jpg" class="img-fluid mb-4 shadow-lg" alt="Aroma massage Chennai">
                 </div>
                 <div class="col-6 col-lg-3">
-                    <img src="./img/4.jpg" class="img-fluid mb-4 shadow-lg" alt="Spa near Thoraipakkam">
+                    <img src="./img/1.jpg" class="img-fluid mb-4 shadow-lg" alt="Spa near Thoraipakkam">
                 </div>
                 <div class="col-6 col-lg-3">
-                    <img src="./img/5.jpg" class="img-fluid mb-4 shadow-lg" alt="Spa in OMR Chennai">
+                    <img src="./img/2.jpg" class="img-fluid mb-4 shadow-lg" alt="Spa in OMR Chennai">
+                </div>
+                <div class="col-6 col-lg-3">
+                    <img src="./img/3.jpg" class="img-fluid mb-4 shadow-lg" alt="Spa near OMR Chennai">
+                </div>
+                <div class="col-6 col-lg-3">
+                    <img src="./img/4.jpg" class="img-fluid mb-4 shadow-lg" alt="Spa near OMR Chennai">
+                </div>
+                <div class="col-6 col-lg-3">
+                    <img src="./img/5.jpg" class="img-fluid mb-4 shadow-lg" alt="Spa near OMR Chennai">
                 </div>
                 <div class="col-6 col-lg-3">
                     <img src="./img/6.jpg" class="img-fluid mb-4 shadow-lg" alt="Spa near OMR Chennai">
                 </div>
-
+                <div class="col-6 col-lg-3">
+                    <img src="./img/7.jpg" class="img-fluid mb-4 shadow-lg" alt="Spa near OMR Chennai">
+                </div>
+                <div class="col-6 col-lg-3">
+                    <img src="./img/8.jpg" class="img-fluid mb-4 shadow-lg" alt="Spa near OMR Chennai">
+                </div>
+                <div class="col-6 col-lg-3">
+                    <img src="./img/9.jpg" class="img-fluid mb-4 shadow-lg" alt="Spa near OMR Chennai">
+                </div>
+                <div class="col-6 col-lg-3">
+                    <img src="./img/10.jpg" class="img-fluid mb-4 shadow-lg" alt="Spa near OMR Chennai">
+                </div>
+                <div class="col-6 col-lg-3">
+                    <img src="./img/11.jpg" class="img-fluid mb-4 shadow-lg" alt="Spa near OMR Chennai">
+                </div>
+                <div class="col-6 col-lg-3">
+                    <img src="./img/12.jpg" class="img-fluid mb-4 shadow-lg" alt="Spa near OMR Chennai">
+                </div>
+                <div class="col-6 col-lg-3">
+                    <img src="./img/13.jpg" class="img-fluid mb-4 shadow-lg" alt="Spa near OMR Chennai">
+                </div>
             </div>
         </div>
     </div>
