--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         <div class="container py-5">
             <div class="row align-items-center">
                 <div class="col-lg-6 pb-5 pb-lg-0">
-                    <img class="img-fluid w-100" src="img/about.jpg" alt="Best facial treatment Chennai">
+                    <img class="img-fluid w-100" src="img/mainlogo.jpg" alt="Best facial treatment Chennai">
                 </div>
                 <div class="col-lg-6">
                     <h6 class="d-inline-block text-primary text-uppercase bg-light py-1 px-2">About Us</h6>
