--- a/service.html
+++ b/service.html
@@ -42,11 +42,11 @@
 </head>
 
 <body>
-     <!-- call button  -->
-     <a class="fixed-tel" href="tel:+918939456060" title="Call Now"><i class="fas fa-phone-alt"></i></a>
-     <!-- whats app button  -->
-     <a class="fixed-tel_2" href="https://wa.me/+918939456060" title="Call Now"><i class="bi bi-whatsapp"></i></a>
-     
+    <!-- call button  -->
+    <a class="fixed-tel" href="tel:+918939456060" title="Call Now"><i class="fas fa-phone-alt"></i></a>
+    <!-- whats app button  -->
+    <a class="fixed-tel_2" href="https://wa.me/+918939456060" title="Call Now"><i class="bi bi-whatsapp"></i></a>
+
     <!-- Topbar Start -->
     <div class="container-fluid bg-light d-none d-lg-block">
         <div class="row py-2 px-lg-5">
@@ -111,7 +111,9 @@
                             <a href="testimonial.html" class="dropdown-item">Testimonial</a>
                         </div>
                     </div> -->
-                    <a href="contact.html" class="nav-item nav-link">Contact</a><a href="https://drive.google.com/file/d/13z68bLGeMTK0AQOfRr3Q8TZsc6GcRjvF/view?usp=drive_link" class="nav-item nav-link">download brochure <i class="bi bi-cloud-download-fill"></i></a>
+                    <a href="contact.html" class="nav-item nav-link">Contact</a><a
+                        href="https://drive.google.com/file/d/13z68bLGeMTK0AQOfRr3Q8TZsc6GcRjvF/view?usp=drive_link"
+                        class="nav-item nav-link">download brochure <i class="bi bi-cloud-download-fill"></i></a>
                 </div>
                 <a href="https://forms.gle/VSdDBfdxjAcgnwNk9" class="btn btn-primary d-none d-lg-block">Book Now</a>
 
@@ -239,6 +241,15 @@
                         Body)</a>
                     <a href="tel:+918939456060" class="list-group-item list-group-item-action">Water Massage (Full
                         Body)</a>
+                    <a href="tel:+918939456060" class="list-group-item list-group-item-action">couple massage</a>
+                    <a href="tel:+918939456060" class="list-group-item list-group-item-action">moroccan bath</a>
+                    <a href="tel:+918939456060" class="list-group-item list-group-item-action">hammam bath</a>
+                    <a href="tel:+918939456060" class="list-group-item list-group-item-action">hammam bath</a>
+                    <a href="tel:+918939456060" class="list-group-item list-group-item-action">jacuzzi bath</a>
+                    <a href="tel:+918939456060" class="list-group-item list-group-item-action">moroccan massage</a>
+                    <a href="tel:+918939456060" class="list-group-item list-group-item-action">hammam massage</a>
+                    <a href="tel:+918939456060" class="list-group-item list-group-item-action">hammam massage</a>
+                    <a href="tel:+918939456060" class="list-group-item list-group-item-action">jacuzzi massage</a>
 
                 </div>
             </div>
@@ -442,7 +453,8 @@
                     <p>Experience luxury and tranquility at Sparizzam. Visit us for personalized spa treatments and pure
                         relaxation.</p>
                     <p><i class="fa fa-map-marker-alt mr-2"></i>Old no 1, New no 33, 2nd floor, <br> OMR, Seevaram,
-                        Perungudi, <br> Chennai-600096</p>
+                       Perungudi, <br> Chennai-600096</p>
+                        <p>car parking available</p>
                     <p><i class="fa fa-phone-alt mr-2"></i>8939456060 ,
                         8939516060</p>
                     <p><i class="fa fa-envelope mr-2"></i>info@sparizzam.com</p>
