--- a/index.html
+++ b/index.html
@@ -509,7 +509,8 @@
                     <p>Experience luxury and tranquility at Sparizzam. Visit us for personalized spa treatments and pure
                         relaxation.</p>
                     <p><i class="fa fa-map-marker-alt mr-2"></i>Old no 1, New no 33, 2nd floor, <br> OMR, Seevaram,
-                        Perungudi, <br> Chennai-600096</p>
+                       Perungudi, <br> Chennai-600096</p>
+                        <p>car parking available</p>
                     <p><i class="fa fa-phone-alt mr-2"></i>8939456060 ,
                         8939516060</p>
                     <p><i class="fa fa-envelope mr-2"></i>info@sparizzam.com</p>
