--- a/gallery.html
+++ b/gallery.html
@@ -49,7 +49,12 @@
 
         gtag('config', 'AW-16673283702');
     </script>
+ </script>
+    <!-- Event snippet for Contact conversion page --> <script> gtag('event', 'conversion', {'send_to': 'AW-16673283702/6660CPr3k8wZEPa8uI4-'}); </script>
+    <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
+
 </head>
+<!-- Google tag (gtag.js) --> <amp-analytics type="gtag" data-credentials="include"> <script type="application/json"> { "vars": { "gtag_id": "AW-16673283702", "config": { "AW-16673283702": { "groups": "default" } } }, "triggers": { } } </script> </amp-analytics>
 
 <body>
     <!-- call button  -->
