--- a/contact.html
+++ b/contact.html
@@ -210,6 +210,66 @@
     </div>
     <!-- Contact End -->
 
+       <!-- Contact Start -->
+       <div class="container-fluid py-5">
+        <div class="container py-5">
+            <div class="row">
+                <div class="col-lg-6" style="min-height: 500px;">
+                    <div class="position-relative h-100">
+                        <iframe class="position-absolute w-100 h-100"
+                            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14263.49275453252!2d80.2272466!3d12.840467!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a525b29dc0a2199%3A0xdb01b8aabb3c35c1!2sSparizzam%20Spa!5e1!3m2!1sen!2sin!4v1731481767333!5m2!1sen!2sin"
+                            frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
+                            tabindex="0"></iframe>
+                            <!-- <iframe src="" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> -->
+                    </div>
+                </div>
+                <div class="col-lg-6 pt-5 pb-lg-5">
+                    <div class="contact-form bg-light p-4 p-lg-5 my-lg-5">
+                        <h6 class="d-inline-block text-white text-uppercase bg-primary py-1 px-2">Contact</h6>
+                        <h1 class="mb-4 text-white">Contact For Any Query</h1>
+                        <div id="success"></div>
+                        <form name="sentMessage" id="contactForm" novalidate="novalidate">
+                            <div class="form-row">
+                                <div class="col-sm-6">
+
+                                    <button class="btn btn-primary btn-block mt-2" style="height: 47px;"> <a
+                                            href="tel:+919087686060" class="text-white"><i
+                                                class="bi bi-telephone-fill"></i> Call </a></button>
+
+                                </div>
+                                <div class="col-sm-6">
+
+                                    <button class="btn btn-primary btn-block mt-2" style="height: 47px;"> <a
+                                            class="text-white" href="https://wa.me/+919087686060"> <i
+                                                class="bi bi-whatsapp"></i> Whats app </a></button>
+
+                                </div>
+                                <div class="col-sm-6">
+
+                                    <button class="btn btn-primary btn-block mt-2" style="height: 47px;"> <a
+                                            class="text-white" href="mailto:sparizzam@gmail.com"><i
+                                                class="bi bi-envelope"></i> Mail </a></button>
+                                </div>
+                                <div class="col-sm-6">
+
+                                    <button class="btn btn-primary btn-block mt-2" style="height: 47px;"><a
+                                            class="text-white" href="https://maps.app.goo.gl/eJaiWHzgGa6uNLha9"><i
+                                                class="bi bi-geo-alt-fill"></i> Location </a></button>
+                                </div>
+                            </div>
+
+
+                            <div>
+
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Contact End -->
+
 
     <!-- Footer Start -->
     <div class="footer container-fluid position-relative bg-dark pt-5" style="margin-top: 90px;">
