--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
                         Perungudi, <br> Chennai-600096</p>
                     <p>car parking available</p>
                     <p><i class="fa fa-phone-alt mr-2"></i>8939456060 ,
-                        8939516060</p>
+                        8939516060, +919087686060</p>
                     <p><i class="fa fa-envelope mr-2"></i>info@sparizzam.com</p>
                     <div class="d-flex justify-content-start mt-4">
                         <a class="btn btn-lg btn-primary btn-lg-square mr-2" href="#"><i class="fab fa-twitter"></i></a>
@@ -560,6 +560,8 @@
                             <iframe
                                 src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7776.56691502167!2d80.242577!3d12.953705!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a525d000fd7e535%3A0x443208e46579acbf!2ssparizzam!5e0!3m2!1sen!2sin!4v1723695311995!5m2!1sen!2sin"
                                 width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy"
+                                referrerpolicy="no-referrer-when-downgrade"></iframe>
+                                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14263.49275453252!2d80.2272466!3d12.840467!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a525b29dc0a2199%3A0xdb01b8aabb3c35c1!2sSparizzam%20Spa!5e1!3m2!1sen!2sin!4v1731484139451!5m2!1sen!2sin"width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy"
                                 referrerpolicy="no-referrer-when-downgrade"></iframe>
                         </div>
                     </div>
