--- a/about.html
+++ b/about.html
@@ -274,8 +274,8 @@
     <!-- Team End -->
 
 
-    <!-- Footer Start -->
-    <div class="footer container-fluid position-relative bg-dark pt-5" style="margin-top: 90px;">
+     <!-- Footer Start -->
+     <div class="footer container-fluid position-relative bg-dark pt-5" style="margin-top: 90px;">
         <div class="container pt-5">
             <div class="row">
                 <div class="col-lg-6 pr-lg-5 mb-2">
@@ -283,15 +283,19 @@
 
                         <h1 class="mb-3 text-white"><span class="text-primary"><img
                                     src="./img/SPARIZZAM PNG-01_logo.png" style="height: 70px; width: auto;"
-                                    alt="Thoraipakkam spa"> &nbsp;SPA</span>rizzam</h1>
+                                    alt="Spa therapy Chennai"> &nbsp;SPA</span>rizzam</h1>
                     </a>
                     <p>Experience luxury and tranquility at Sparizzam. Visit us for personalized spa treatments and pure
                         relaxation.</p>
                     <p><i class="fa fa-map-marker-alt mr-2"></i>Old no 1, New no 33, 2nd floor, <br> OMR, Seevaram,
                         Perungudi, <br> Chennai-600096</p>
+                        <p><i class="fa fa-phone-alt mr-2"></i>8939456060 ,
+                            8939516060, +919087686060</p>
+                        <p><i class="fa fa-map-marker-alt mr-2"></i>M.R Complex, 34, Rajiv Gandhi Salai, Near Toll Gate, Thiruporur, Navalur, Egattur Village, Chennai, Tamil Nadu 600130</p>
+                    
+                    <p><i class="fa fa-phone-alt mr-2"></i>09087696060</p>
+
                     <p>car parking available</p>
-                    <p><i class="fa fa-phone-alt mr-2"></i>8939456060 ,
-                        8939516060 ,9087686060</p>
                     <p><i class="fa fa-envelope mr-2"></i>info@sparizzam.com</p>
                     <div class="d-flex justify-content-start mt-4">
                         <a class="btn btn-lg btn-primary btn-lg-square mr-2" href="#"><i class="fab fa-twitter"></i></a>
